--- a/account-notifications.html
+++ b/account-notifications.html
@@ -1695,11 +1695,11 @@
                                         </div>
                                       </section>
                                       <div class="_r57mdk">
-                                        <div class="_ttgom0">
+                                        <div class="form-floating">
                                           <label
-                                            class="_19nw8j1"
+                                            class="form-floating__control"
                                             for="notification-settings-active-phone-chooser"
-                                            ><div class="_zhftk97">
+                                            ><div class="form-floating__label">
                                               <div class="_11hx67x">
                                                 Choose a phone number
                                               </div>
@@ -1718,7 +1718,7 @@
                                               </select>
                                             </div></label
                                           >
-                                          <div class="_lmil0">
+                                          <div class="form-floating__addon">
                                             <svg
                                               viewBox="0 0 32 32"
                                               xmlns="http://www.w3.org/2000/svg"
