--- a/calendar_agenda.html
+++ b/calendar_agenda.html
@@ -4230,9 +4230,9 @@
                           class="_oas64w"
                         >
                           <div>
-                            <div class="_ttgom0">
-                              <label class="_19nw8j1" for="starts_at"
-                                ><div class="_zhftk97">
+                            <div class="form-floating">
+                              <label class="form-floating__control" for="starts_at"
+                                ><div class="form-floating__label">
                                   <div class="_11hx67x">Time</div>
                                 </div>
                                 <div class="box-border">
@@ -4389,7 +4389,7 @@
                                   </select>
                                 </div></label
                               >
-                              <div class="_lmil0">
+                              <div class="form-floating__addon">
                                 <svg
                                   viewBox="0 0 32 32"
                                   xmlns="http://www.w3.org/2000/svg"
@@ -4425,8 +4425,8 @@
                         >
                           <div>
                             <div class="_edsstek">
-                              <label class="_19nw8j1" for="instance_host_ids"
-                                ><div class="_zhftk97">
+                              <label class="form-floating__control" for="instance_host_ids"
+                                ><div class="form-floating__label">
                                   <div class="_11hx67x">Host</div>
                                 </div>
                                 <div class="_14lk9e14">
@@ -4479,9 +4479,9 @@
                           class="_oas64w"
                         >
                           <div>
-                            <div class="_ttgom0">
-                              <label class="_19nw8j1" for="booking_type"
-                                ><div class="_zhftk97">
+                            <div class="form-floating">
+                              <label class="form-floating__control" for="booking_type"
+                                ><div class="form-floating__label">
                                   <div class="_11hx67x">Booking type</div>
                                 </div>
                                 <div class="box-border">
@@ -4503,7 +4503,7 @@
                                   </select>
                                 </div></label
                               >
-                              <div class="_lmil0">
+                              <div class="form-floating__addon">
                                 <svg
                                   viewBox="0 0 32 32"
                                   xmlns="http://www.w3.org/2000/svg"
@@ -4673,7 +4673,7 @@
                                 <label
                                   for="language_codes_selectdropdown"
                                   class="_13kgb0p"
-                                  ><div class="_zhftk97">
+                                  ><div class="form-floating__label">
                                     <div class="_11hx67x">Languages</div>
                                   </div>
                                   <div
@@ -4685,7 +4685,7 @@
                                     English
                                   </div></label
                                 >
-                                <div class="_lmil0">
+                                <div class="form-floating__addon">
                                   <svg
                                     viewBox="0 0 18 18"
                                     role="presentation"
@@ -4714,11 +4714,11 @@
                           class="_oas64w"
                         >
                           <div>
-                            <div class="_ttgom0">
+                            <div class="form-floating">
                               <label
-                                class="_19nw8j1"
+                                class="form-floating__control"
                                 for="last_booking_lead_minutes"
-                                ><div class="_zhftk97">
+                                ><div class="form-floating__label">
                                   <div class="_11hx67x">
                                     Cutoff time for additional guests
                                   </div>
@@ -4784,7 +4784,7 @@
                                   </select>
                                 </div></label
                               >
-                              <div class="_lmil0">
+                              <div class="form-floating__addon">
                                 <svg
                                   viewBox="0 0 32 32"
                                   xmlns="http://www.w3.org/2000/svg"
@@ -4819,11 +4819,11 @@
                           class="_oas64w"
                         >
                           <div>
-                            <div class="_ttgom0">
+                            <div class="form-floating">
                               <label
-                                class="_19nw8j1"
+                                class="form-floating__control"
                                 for="first_booking_lead_minutes"
-                                ><div class="_zhftk97">
+                                ><div class="form-floating__label">
                                   <div class="_11hx67x">
                                     Cutoff time for your first guest
                                   </div>
@@ -4883,7 +4883,7 @@
                                   </select>
                                 </div></label
                               >
-                              <div class="_lmil0">
+                              <div class="form-floating__addon">
                                 <svg
                                   viewBox="0 0 32 32"
                                   xmlns="http://www.w3.org/2000/svg"
@@ -4918,9 +4918,9 @@
                           class="_oas64w"
                         >
                           <div class="_zjgkr9">
-                            <div class="_ttgom0">
-                              <label class="_19nw8j1" for="frequency"
-                                ><div class="_zhftk97">
+                            <div class="form-floating">
+                              <label class="form-floating__control" for="frequency"
+                                ><div class="form-floating__label">
                                   <div class="_11hx67x">Repeat scheduling</div>
                                 </div>
                                 <div class="box-border">
@@ -4936,7 +4936,7 @@
                                   </select>
                                 </div></label
                               >
-                              <div class="_lmil0">
+                              <div class="form-floating__addon">
                                 <svg
                                   viewBox="0 0 32 32"
                                   xmlns="http://www.w3.org/2000/svg"
