--- a/contact-host.html
+++ b/contact-host.html
@@ -2514,7 +2514,7 @@
                                                                         </div></label
                                                                       >
                                                                       <div
-                                                                        class="_lmil0"
+                                                                        class="form-floating__addon"
                                                                       >
                                                                         <svg
                                                                           viewBox="0 0 32 32"
