--- a/edit/GuestReq.html
+++ b/edit/GuestReq.html
@@ -425,7 +425,7 @@
                                       >
                                         <div class="_4mmmhh">
                                           <label
-                                            class="_19nw8j1"
+                                            class="form-floating__control"
                                             for="MINIMUM_AGE-select"
                                             ><div>
                                               <div class="_d8a74u">
