--- a/insights.html
+++ b/insights.html
@@ -1395,9 +1395,9 @@
                                   </h2>
                                 </section>
                                 <div class="_1bjnx2l">
-                                  <div class="_ttgom0">
+                                  <div class="form-floating">
                                     <label
-                                      class="_19nw8j1"
+                                      class="form-floating__control"
                                       for="EXPERIENCES_HOST_INSIGHTS_HEADING_SELECT-select"
                                       ><span class="a8jt5op dir dir-ltr"
                                         >Review range</span
@@ -1415,7 +1415,7 @@
                                       </div></label
                                     >
 
-                                    <div class="_lmil0">
+                                    <div class="form-floating__addon">
                                       <svg
                                         viewBox="0 0 32 32"
                                         xmlns="http://www.w3.org/2000/svg"
