--- a/personal-info.html
+++ b/personal-info.html
@@ -530,9 +530,9 @@
                                   <form>
                                     <div style="margin-bottom: 24px">
                                       <div>
-                                        <div class="_ttgom0">
+                                        <div class="form-floating">
                                           <label
-                                            class="_19nw8j1"
+                                            class="form-floating__control"
                                             for="gender-input"
                                             ><div class="_1wud6lj">
                                               <div class="_11hx67x">Gender</div>
@@ -558,7 +558,7 @@
                                               </select>
                                             </div></label
                                           >
-                                          <div class="_lmil0">
+                                          <div class="form-floating__addon">
                                             <svg
                                               viewBox="0 0 32 32"
                                               xmlns="http://www.w3.org/2000/svg"
@@ -1100,11 +1100,11 @@
                                                 <div
                                                   style="margin-bottom: 16px"
                                                 >
-                                                  <div class="_ttgom0">
+                                                  <div class="form-floating">
                                                     <label
-                                                      class="_19nw8j1"
+                                                      class="form-floating__control"
                                                       for="addresscountry_code"
-                                                      ><div class="_zhftk97">
+                                                      ><div class="form-floating__label">
                                                         <div class="_11hx67x">
                                                           Country/region
                                                         </div>
@@ -1864,7 +1864,7 @@
                                                         </select>
                                                       </div></label
                                                     >
-                                                    <div class="_lmil0">
+                                                    <div class="form-floating__addon">
                                                       <svg
                                                         viewBox="0 0 32 32"
                                                         xmlns="http://www.w3.org/2000/svg"
@@ -2331,9 +2331,9 @@
                                       </div>
                                       <div style="margin-top: 16px">
                                         <div>
-                                          <div class="_ttgom0">
+                                          <div class="form-floating">
                                             <label
-                                              class="_19nw8j1"
+                                              class="form-floating__control"
                                               for="preferred_language"
                                               ><div class="_1wud6lj">
                                                 <div class="_11hx67x">
@@ -2533,7 +2533,7 @@
                                                 </select>
                                               </div></label
                                             >
-                                            <div class="_lmil0">
+                                            <div class="form-floating__addon">
                                               <svg
                                                 viewBox="0 0 32 32"
                                                 xmlns="http://www.w3.org/2000/svg"
@@ -2592,9 +2592,9 @@
                                         <div class="_12ifkibl">
                                           <div style="margin-top: 16px">
                                             <div>
-                                              <div class="_ttgom0">
+                                              <div class="form-floating">
                                                 <label
-                                                  class="_19nw8j1"
+                                                  class="form-floating__control"
                                                   for="phone_country"
                                                   ><div class="_1wud6lj">
                                                     <div class="_11hx67x">
@@ -3361,7 +3361,7 @@
                                                     </select>
                                                   </div></label
                                                 >
-                                                <div class="_lmil0">
+                                                <div class="form-floating__addon">
                                                   <svg
                                                     viewBox="0 0 32 32"
                                                     xmlns="http://www.w3.org/2000/svg"
@@ -3937,9 +3937,9 @@
                                       <form>
                                         <div style="margin-bottom: 24px">
                                           <div>
-                                            <div class="_ttgom0">
+                                            <div class="form-floating">
                                               <label
-                                                class="_19nw8j1"
+                                                class="form-floating__control"
                                                 for="gender-input"
                                                 ><div class="_1wud6lj">
                                                   <div class="_11hx67x">
@@ -3967,7 +3967,7 @@
                                                   </select>
                                                 </div></label
                                               >
-                                              <div class="_lmil0">
+                                              <div class="form-floating__addon">
                                                 <svg
                                                   viewBox="0 0 32 32"
                                                   xmlns="http://www.w3.org/2000/svg"
@@ -4527,12 +4527,12 @@
                                                         margin-bottom: 16px;
                                                       "
                                                     >
-                                                      <div class="_ttgom0">
+                                                      <div class="form-floating">
                                                         <label
-                                                          class="_19nw8j1"
+                                                          class="form-floating__control"
                                                           for="addresscountry_code"
                                                           ><div
-                                                            class="_zhftk97"
+                                                            class="form-floating__label"
                                                           >
                                                             <div
                                                               class="_11hx67x"
@@ -5786,7 +5786,7 @@
                                                             </select>
                                                           </div></label
                                                         >
-                                                        <div class="_lmil0">
+                                                        <div class="form-floating__addon">
                                                           <svg
                                                             viewBox="0 0 32 32"
                                                             xmlns="http://www.w3.org/2000/svg"
@@ -6311,9 +6311,9 @@
                                           </div>
                                           <div style="margin-top: 16px">
                                             <div>
-                                              <div class="_ttgom0">
+                                              <div class="form-floating">
                                                 <label
-                                                  class="_19nw8j1"
+                                                  class="form-floating__control"
                                                   for="preferred_language"
                                                   ><div class="_1wud6lj">
                                                     <div class="_11hx67x">
@@ -6513,7 +6513,7 @@
                                                     </select>
                                                   </div></label
                                                 >
-                                                <div class="_lmil0">
+                                                <div class="form-floating__addon">
                                                   <svg
                                                     viewBox="0 0 32 32"
                                                     xmlns="http://www.w3.org/2000/svg"
@@ -6574,9 +6574,9 @@
                                             <div class="_12ifkibl">
                                               <div style="margin-top: 16px">
                                                 <div>
-                                                  <div class="_ttgom0">
+                                                  <div class="form-floating">
                                                     <label
-                                                      class="_19nw8j1"
+                                                      class="form-floating__control"
                                                       for="phone_country"
                                                       ><div class="_1wud6lj">
                                                         <div class="_11hx67x">
@@ -7690,7 +7690,7 @@
                                                         </select>
                                                       </div></label
                                                     >
-                                                    <div class="_lmil0">
+                                                    <div class="form-floating__addon">
                                                       <svg
                                                         viewBox="0 0 32 32"
                                                         xmlns="http://www.w3.org/2000/svg"
