--- a/products.html
+++ b/products.html
@@ -16646,7 +16646,7 @@
                                                                               </div></label
                                                                             >
                                                                             <div
-                                                                              class="_lmil0"
+                                                                              class="form-floating__addon"
                                                                             >
                                                                               <svg
                                                                                 viewBox="0 0 32 32"
@@ -17140,7 +17140,7 @@
                                                                               </div></label
                                                                             >
                                                                             <div
-                                                                              class="_lmil0"
+                                                                              class="form-floating__addon"
                                                                             >
                                                                               <svg
                                                                                 viewBox="0 0 32 32"
@@ -17833,7 +17833,7 @@
                                                                               </div></label
                                                                             >
                                                                             <div
-                                                                              class="_lmil0"
+                                                                              class="form-floating__addon"
                                                                             >
                                                                               <svg
                                                                                 viewBox="0 0 32 32"
