--- a/signup_login.html
+++ b/signup_login.html
@@ -233,10 +233,10 @@
                                             ></div>
                                             <div class="_ey3tib">
                                               <label
-                                                class="_19nw8j1"
+                                                class="form-floating__control"
                                                 for="country"
                                               >
-                                                <div class="_zhftk97">
+                                                <div class="form-floating__label">
                                                   <div class="_11hx67x">
                                                     Country/Region
                                                   </div>
@@ -993,7 +993,7 @@
                                                   </select>
                                                 </div>
                                               </label>
-                                              <div class="_lmil0">
+                                              <div class="form-floating__addon">
                                                 <svg
                                                   viewBox="0 0 32 32"
                                                   xmlns="http://www.w3.org/2000/svg"
@@ -3287,10 +3287,10 @@
                                           ></div>
                                           <div class="_ey3tib">
                                             <label
-                                              class="_19nw8j1"
+                                              class="form-floating__control"
                                               for="country"
                                             >
-                                              <div class="_zhftk97">
+                                              <div class="form-floating__label">
                                                 <div class="_11hx67x">
                                                   Country/Region
                                                 </div>
@@ -4045,7 +4045,7 @@
                                                 </select>
                                               </div>
                                             </label>
-                                            <div class="_lmil0">
+                                            <div class="form-floating__addon">
                                               <svg
                                                 viewBox="0 0 32 32"
                                                 xmlns="http://www.w3.org/2000/svg"
