--- a/submission/GroupSize.html
+++ b/submission/GroupSize.html
@@ -1077,11 +1077,11 @@
                               <div class="_1m26oin">
                                 <div class="_1f90wx">
                                   <div class="_j69sjg">Public groups</div>
-                                  <div class="_ttgom0">
+                                  <div class="form-floating">
                                     <label
-                                      class="_19nw8j1"
+                                      class="form-floating__control"
                                       for="data-type-picker-Public groups"
-                                      ><div class="_zhftk97">
+                                      ><div class="form-floating__label">
                                         <div class="_11hx67x">
                                           Maximum group size
                                         </div>
@@ -1105,7 +1105,7 @@
                                         </select>
                                       </div></label
                                     >
-                                    <div class="_lmil0">
+                                    <div class="form-floating__addon">
                                       <svg
                                         viewBox="0 0 32 32"
                                         xmlns="http://www.w3.org/2000/svg"
@@ -1140,11 +1140,11 @@
                               <div class="_1m26oin">
                                 <div class="_1f90wx">
                                   <div class="_j69sjg">Private groups</div>
-                                  <div class="_ttgom0">
+                                  <div class="form-floating">
                                     <label
-                                      class="_19nw8j1"
+                                      class="form-floating__control"
                                       for="data-type-picker-Private groups"
-                                      ><div class="_zhftk97">
+                                      ><div class="form-floating__label">
                                         <div class="_11hx67x">
                                           Maximum group size
                                         </div>
@@ -1188,7 +1188,7 @@
                                         </select>
                                       </div></label
                                     >
-                                    <div class="_lmil0">
+                                    <div class="form-floating__addon">
                                       <svg
                                         viewBox="0 0 32 32"
                                         xmlns="http://www.w3.org/2000/svg"
