--- a/submission/guestReq.html
+++ b/submission/guestReq.html
@@ -1073,7 +1073,7 @@
                               <div class="_7e300w">
                                 <div class="_4mmmhh">
                                   <label
-                                    class="_19nw8j1"
+                                    class="form-floating__control"
                                     for="guest_requirements_min_age_select"
                                     ><div>
                                       <div class="_d8a74u">Minimum age</div>
