--- a/submission/wwd.html
+++ b/submission/wwd.html
@@ -1121,11 +1121,11 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                                   </div>
                                 </legend>
                                 <div>
-                                  <div class="_ttgom0">
+                                  <div class="form-floating">
                                     <label
-                                      class="_19nw8j1"
+                                      class="form-floating__control"
                                       for="experience_duration"
-                                      ><div class="_zhftk97">
+                                      ><div class="form-floating__label">
                                         <div class="_11hx67x">Duration</div>
                                       </div>
                                       <div class="box-border">
@@ -1243,7 +1243,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                                         </select>
                                       </div></label
                                     >
-                                    <div class="_lmil0">
+                                    <div class="form-floating__addon">
                                       <svg
                                         viewBox="0 0 32 32"
                                         xmlns="http://www.w3.org/2000/svg"
