--- a/edit/what.html
+++ b/edit/what.html
@@ -484,11 +484,11 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                             </div>
                                           </legend>
                                           <div>
-                                            <div class="_ttgom0">
+                                            <div class="form-floating">
                                               <label
-                                                class="_19nw8j1"
+                                                class="form-floating__control"
                                                 for="DURATION"
-                                                ><div class="_zhftk97">
+                                                ><div class="form-floating__label">
                                                   <div class="_11hx67x">
                                                     Duration
                                                   </div>
@@ -609,7 +609,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                                   </select>
                                                 </div></label
                                               >
-                                              <div class="_lmil0">
+                                              <div class="form-floating__addon">
                                                 <svg
                                                   viewBox="0 0 32 32"
                                                   xmlns="http://www.w3.org/2000/svg"
