--- a/payments/payout-methods.html
+++ b/payments/payout-methods.html
@@ -361,7 +361,7 @@
                                                               >
                                                                 <a
                                                                   href="/account-details?source=PAYOUTS_BANNER"
-                                                                  class="_1ju7xj0j"
+                                                                  class="btn-outline-small"
                                                                   >Start now</a
                                                                 >
                                                               </div>
@@ -931,7 +931,7 @@
                                                             >
                                                               <a
                                                                 href="/account-details?source=PAYOUTS_BANNER"
-                                                                class="_1ju7xj0j"
+                                                                class="btn-outline-small"
                                                                 >Start now</a
                                                               >
                                                             </div>
