--- a/submission/discounts.html
+++ b/submission/discounts.html
@@ -1292,7 +1292,7 @@
                             <button
                               id="lyt-back-button"
                               type="button"
-                              class="_1ju7xj0j"
+                              class="btn-outline--small"
                             >
                               Back
                             </button>
