--- a/submission/etd.html
+++ b/submission/etd.html
@@ -514,7 +514,7 @@
                                         type="button"
                                         class="_o7xaku5"
                                         data-veloute="about-you"
-                                        
+
                                         onclick="window.location.href='about.html';"
                                       >
                                         <div class="_1o9iciw">
@@ -1191,7 +1191,7 @@
                             <button
                               id="lyt-back-button"
                               type="button"
-                              class="_1ju7xj0j"
+                              class="btn-outline--small"
                             >
                               Back
                             </button>
