--- a/submission/title.html
+++ b/submission/title.html
@@ -1036,7 +1036,7 @@
                       </div>
                       <div class="_g7lz6c">Title</div>
                       <div class="_ls0e43">
-                        <button type="button" class="_1ju7xj0j">Preview</button>
+                        <button type="button" class="btn-outline--small">Preview</button>
                       </div>
                     </div>
                     <section class="_92ham2">
@@ -1166,7 +1166,7 @@ Lorem Ipsum is simply dummy text of the printing</textarea
                             <button
                               id="lyt-back-button"
                               type="button"
-                              class="_1ju7xj0j"
+                              class="btn-outline--small"
                             >
                               Back
                             </button>
