--- a/basics.html
+++ b/basics.html
@@ -897,7 +897,7 @@
                             <button
                               id="lyt-back-button"
                               type="button"
-                              class="_1ju7xj0j"
+                              class="btn-outline--small"
                             >
                               Back
                             </button>
