--- a/calendar_agenda.html
+++ b/calendar_agenda.html
@@ -193,7 +193,7 @@
                               aria-label="Today, 9 July 2022, Saturday"
                               disabled=""
                               type="button"
-                              class="_1ju7xj0j"
+                              class="btn-outline--small"
                             >
                               Today
                             </button>
@@ -625,7 +625,7 @@
                               <div>
                                 <div>
                                   <div>
-                                    <button type="button" class="_1ju7xj0j">
+                                    <button type="button" class="btn-outline--small">
                                       <span class="_14d5b3i"
                                         ><span class="box-border">Actions</span
                                         ><span class="_9y3psr"
