--- a/calendar_week.html
+++ b/calendar_week.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="assets/css/global.css" />
     <link rel="stylesheet" href="assets/css/pages.css" />
-    
+
     <title>Experiences Dashboard - Calendar</title>
   </head>
   <body class="with-new-header touch">
@@ -190,7 +190,7 @@
                             <button
                               aria-label="Today, 9 July 2022, Saturday"
                               type="button"
-                              class="_1ju7xj0j"
+                              class="btn-outline--small"
                               disabled=""
                             >
                               Today
@@ -623,7 +623,7 @@
                               <div>
                                 <div>
                                   <div>
-                                    <button type="button" class="_1ju7xj0j">
+                                    <button type="button" class="btn-outline--small">
                                       <span class="_14d5b3i"
                                         ><span class="box-border">Actions</span
                                         ><span class="_9y3psr"
