--- a/submission/guestReq.html
+++ b/submission/guestReq.html
@@ -1037,7 +1037,7 @@
                       </div>
                       <div class="_g7lz6c">Guest requirements</div>
                       <div class="_ls0e43">
-                        <button type="button" class="_1ju7xj0j">Preview</button>
+                        <button type="button" class="btn-outline--small">Preview</button>
                       </div>
                     </div>
                     <section class="_92ham2">
@@ -1543,7 +1543,7 @@
                             <button
                               id="lyt-back-button"
                               type="button"
-                              class="_1ju7xj0j"
+                              class="btn-outline--small"
                             >
                               Back
                             </button>
